Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.0
-
Fix Version/s: 10.5.1
-
Component/s: Information Schema, Storage Engine - InnoDB
-
Labels:
Description
The recently added test innodb.innodb_wl6326_big fails because of a change that was introduced in MDEV-19940:
CURRENT_TEST: innodb.innodb_wl6326_big
|
mysqltest: At line 157: query 'CREATE TABLE my_metrics LIKE information_schema.innodb_metrics' failed: 1067: Invalid default value for 'TYPE'
|
The column information_schema.innodb_metrics.type used to be declared VARCHAR…NOT NULL DEFAULT '', but now it is ENUM…NOT NULL DEFAULT ''. A proper default value should be declared.
Attachments
Issue Links
- is caused by
-
MDEV-19940 Clean up INFORMATION_SCHEMA.INNODB_ tables
-
- Closed
-
- relates to
-
MDEV-20254 Problems with EMPTY_STRING_IS_NULL and I_S tables
-
- Closed
-